# bible

./: .gcloudignore  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  Dockerfile.prod  PRODUCTION_COST.md  README.md  WALKTHROUGH.md  api.py  api_client.py  batch_enrichment_job.py  batch_enrichment_job2.py  benchmark.py  chapter01.xhtml  cloudbuild.yaml  concise-theology_scripture-references.RDS  deploy_gcp.sh  docker-compose.yml  index.html  ingest_bible.py  ingest_html.py  migrate_v3.py  pyproject.toml  requirements-dev.txt  requirements.txt  scrape_translations.py  test_indent.py  test_output.html  test_parse_ref2.py  verify_formatting.py
.agent/knowledge_items/: api_rendering.md  data_ingestion.md  reference_parsing.md
.github/workflows/: python-ci.yml
.old/: api.backup.py
bible-gateway/: base.css
bible_api/: __init__.py  api.py  batch_enrichment.py  benchmark.py  client.py  config.py  db.py  passage.py  ui.py
bible_api/static/: passage-text.css
deploy/windows-service/: README.md  WINDOWS_SERVICE.md  bible_server_highperf_task.xml  bible_server_service.xml  start_bible_server_highperf.bat
extra/: psalter.psv  psalter_verses.psv
legacy_test/: README.md  benchmark.py  benchmark_17w.txt  benchmark_1w.txt  parse.py  test_osis.py
scripts/: download_db.py  ingest_html.py  ingest_psalter.py  quick_start.py  scrape_translations.py  setup_env.py
scripts/helpers/: parse2.py
test/: benchmark.py  benchmark_4w.txt  benchmark_5w.txt  bible_passages_sample2.csv  index.html
tests/: test_osis.py  test_parse_ref.py  test_render_passage.py
(+2 files in other folders)
